--- a/Quoc0605/Quoc0605/Views/Shared/_Layout.cshtml
+++ b/Quoc0605/Quoc0605/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "navbar-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "navbar-link" })</li>
-                    <li>@Html.ActionLink("TvcStuden", "Index", "TvcStudent", new { area = "" }, new { @class = "navbar-link" })</li>
-                    <li>@Html.ActionLink("Chi tiết", "Details", "TvcStudent", new { area = "" }, new { @class = "navbar-link" })</li>
-                    <li>@Html.ActionLink("Razor", "NgonNguRazor", "TvcStudent", new { area = "" }, new { @class = "navbar-link" })</li>
-                    <li>@Html.ActionLink("Add New Student ", "AddNewStudent", "TvcStudent", new { area = "" }, new { @class = "navbar-link" })</li>
+                    <li>@Html.ActionLink("NtqStudent", "Index", "NtqStudent", new { area = "" }, new { @class = "navbar-link" })</li>
+                    <li>@Html.ActionLink("Chi tiết", "Details", "NtqStudent", new { area = "" }, new { @class = "navbar-link" })</li>
+                    <li>@Html.ActionLink("Razor", "NgonNguRazor", "NtqStudent", new { area = "" }, new { @class = "navbar-link" })</li>
+                    <li>@Html.ActionLink("Add New Student ", "AddNewStudent", "NtqStudent", new { area = "" }, new { @class = "navbar-link" })</li>
                 </ul>
             </div>
         </div>
