--- a/NtqLesson09/NtqBaiKiemTraGiuaKi/Views/NtqKhoas/Create.cshtml
+++ b/NtqLesson09/NtqBaiKiemTraGiuaKi/Views/NtqKhoas/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model NtqBaiKiemTraGiuaKi.Models.NtqKhoa
+﻿@model NtqBaiKiemTraGiuaKi.Models.ntqKhoa
 
 @{
-    ViewBag.Title = "NtqCreate";
+    ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
@@ -12,22 +12,22 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>NtqKhoa</h4>
+        <h4>ntqKhoa</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.NtqMaKhoa, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NtqMaKH, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NtqMaKhoa, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NtqMaKhoa, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.NtqMaKH, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NtqMaKH, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NtqTenKhoa, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NtqTenKH, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NtqTenKhoa, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NtqTenKhoa, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.NtqTenKH, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NtqTenKH, "", new { @class = "text-danger" })
             </div>
         </div>
 
