--- a/NtqLesson09/NtqBaiKiemTraGiuaKi/Views/NtqKhoas/Delete.cshtml
+++ b/NtqLesson09/NtqBaiKiemTraGiuaKi/Views/NtqKhoas/Delete.cshtml
@@ -1,22 +1,22 @@
-﻿@model NtqBaiKiemTraGiuaKi.Models.NtqKhoa
+﻿@model NtqBaiKiemTraGiuaKi.Models.ntqKhoa
 
 @{
-    ViewBag.Title = "NtqDelete";
+    ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>NtqKhoa</h4>
+    <h4>ntqKhoa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NtqTenKhoa)
+            @Html.DisplayNameFor(model => model.NtqTenKH)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.NtqTenKhoa)
+            @Html.DisplayFor(model => model.NtqTenKH)
         </dd>
 
         <dt>
