--- a/Quoc_2210900119/Quoc_2210900119/Views/Shared/_Layout.cshtml
+++ b/Quoc_2210900119/Quoc_2210900119/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Quốc_Tác Giả", "NtqIndex", "NTQ_TACGIA", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Quốc_Sách", "NtqIndex", "NTQ_SACH", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Tác Giả", "NtqIndex", "NTQ_TACGIA", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Sách", "NtqIndex", "NTQ_SACH", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
